--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:text="@string/timed_btn"
         android:textSize="12sp"
         android:onClick="onTimedClick"
         android:layout_weight="1"/>
 
     <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" 
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:text="@string/high_score"
         android:onClick="onHighScoreClick"
         android:layout_weight="1"/>
