--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="@string/timed_btn"
+        android:text="@string/play_btn"
         android:textSize="12sp"
-        android:onClick="onTimedClick"
+        android:onClick="onPlayClick"
         android:layout_weight="1"/>
 
     <Button
