--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -5,8 +5,8 @@
     <com.example.hrafnkell.dots.BoardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#A0E0A0"
-        android:padding="10pt"
+        android:background="#FFF"
+        android:padding="0pt"
         android:layout_margin="10pt"
-        />
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
