--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -6,7 +6,7 @@
     <com.example.hrafnkell.dots.BoardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#f0e4ca"
+        android:background="#000"
         android:padding="0pt"
         android:layout_margin="10pt"
         android:layout_gravity="center_vertical" />
