Added some gameplay implementation, doesn't work right though.

--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -2,7 +2,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0e4ca">
+    android:background="#f0e4ca"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:text="@string/score_text"
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10pt"
+            android:layout_marginTop="10pt"/>
+        <TextView
+            android:id="@+id/play_score"
+            android:layout_width="20dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10pt"
+            android:textSize="30sp"/>
+
+    </LinearLayout>
+
     <com.example.hrafnkell.dots.BoardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
