--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:weightSum="1">
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="285dp"
         android:layout_height="0dp"
+        android:layout_gravity="center"
         android:text="@string/play_btn"
         android:textSize="12sp"
         android:onClick="onPlayClick"
-        android:layout_weight="1"/>
+        android:layout_weight="0.22" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="283dp"
+        android:layout_height="148dp"
+        android:layout_gravity="center"
+
         android:text="@string/high_score"
-        android:onClick="onHighScoreClick"
-        android:layout_weight="1"/>
+        android:onClick="onHighScoreClick" />
 
 
 
