--- a/app/src/main/res/layout/row_layout_highscore.xml
+++ b/app/src/main/res/layout/row_layout_highscore.xml
@@ -14,7 +14,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:layout_marginLeft="10dp"/>
     <TextView
         android:id="@+id/row_name"
         android:layout_width="0dp"
